# otus-cpp-09

./: .travis.yml  CMakeLists.txt  README.md  bayan.1  bintray.json
inc/: bayan.hpp  lazy_digest.hpp
src/: bayan.cpp  lazy_digest.cpp  main.cpp
test/: test.cpp
